--- a/src/main/resources/templates/admin/header.html
+++ b/src/main/resources/templates/admin/header.html
@@ -45,7 +45,7 @@
                     </a>
                 </div>
                 <div class="pull-left admin-title" style="padding-left: 10px;">
-                    <span style="font-size: 28px; color: #2f353f; line-height: 50px;">Tale Blog</span>
+                    <span style="font-size: 28px; color: #2f353f; line-height: 50px;">冬瓜棠雪</span>
                 </div>
             </div>
         </div>
